Cleanup, user seed data, colors.

--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,2 @@
 DB_URI=mongodb://scheduler_admin:QFB836tzSvwf78wfqYuKk4vz0nP5lj@ds161471.mlab.com:61471/scheduler
+DB_URI_TEST=mongodb://scheduler_admin:QFB836tzSvwf78wfqYuKk4vz0nP5lj@ds149743.mlab.com:49743/scheduler-test
