--- a/api/package.json
+++ b/api/package.json
@@ -21,8 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash.merge": "^4.6.2",
     "mongo": "^0.1.0",
-    "mongoose": "^5.7.13",
-    "validator": "^12.1.0"
+    "mongoose": "^5.7.13"
   },
   "devDependencies": {
     "babel-eslint": "10.0.3",
