--- a/client/package.json
+++ b/client/package.json
@@ -28,12 +28,7 @@
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.5",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-transform-runtime": "^7.7.5",
-    "@babel/preset-react": "^7.7.4",
     "babel-eslint": "^10.0.3",
-    "babel-plugin-import": "^1.13.0",
     "browserslist": "^4.8.2",
     "eslint": "^6.7.2",
     "eslint-config-airbnb": "^18.0.1",
@@ -43,6 +38,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "husky": "^3.1.0",
     "jest": "^24.9.0",
     "lint-staged": "^9.5.0",
