--- a/api/package.json
+++ b/api/package.json
@@ -17,8 +17,10 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.9.13",
+    "date-fns": "^2.8.1",
     "graphql": "^14.5.8",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "lodash.merge": "^4.6.2",
     "mongodb": "^3.3.5",
     "mongoose": "^5.7.13"
