--- a/api/package.json
+++ b/api/package.json
@@ -35,7 +35,7 @@
     "husky": "3.1.0",
     "jest": "24.9.0",
     "lint-staged": "9.5.0",
-    "nodemon": "2.0.1",
+    "nodemon": "^2.0.1",
     "prettier": "1.19.1"
   },
   "jest": {
