--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "apollo-server": "^2.9.13",
     "date-fns": "^2.8.1",
+    "date-fns-tz": "^1.0.8",
     "graphql": "^14.5.8",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
