--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,17 @@
     "dev": "parcel ./src/index.html --port 4000",
     "start": "parcel ./src/index.html --port 4000",
     "start:https": "parcel ./src/index.html --https --port 4000",
-    "test": "jest",
-    "test:watch": "jest",
+    "test": "jest --watch",
+    "test:once": "jest",
     "eslint": "eslint --fix ./src",
     "build": "parcel build ./src/index.html/",
     "packages:update": "ncu -u"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -28,8 +30,16 @@
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.5",
+    "@babel/preset-env": "^7.7.6",
+    "@babel/preset-react": "^7.7.4",
+    "@babel/runtime": "^7.7.6",
     "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
     "browserslist": "^4.8.2",
+    "cross-fetch": "^3.0.4",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.7.2",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.7.0",
@@ -40,22 +50,28 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "husky": "^3.1.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "lint-staged": "^9.5.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
+    "react-test-renderer": "^16.12.0",
     "sass": "^1.23.7"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "./config/setupTests.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    }
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
   ],
-  "jest": {
-    "setupFilesAfterEnv": [
-      "./config/setupTests.js"
-    ]
-  },
   "lint-staged": {
     "*.js": [
       "eslint --fix",
