--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@material-ui/core": "^4.7.2",
     "apollo-boost": "^0.4.4",
+    "date-fns": "^2.8.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "normalize.css": "^8.0.1",
